WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
21147
hash property returns incorrect value for links w/o hash
https://bugs.webkit.org/show_bug.cgi?id=21147
Summary
hash property returns incorrect value for links w/o hash
Przemyslaw Pawelczyk
Reported
2008-09-26 12:41:29 PDT
Test case:
http://old.przemoc.net:81/hash.html
Hash property should contain hash only if it was specified. Only Opera passed my test, IE and Fx partially, but WebKit failed.
Attachments
proposed fix
(8.18 KB, patch)
2009-02-16 05:40 PST
,
Alexey Proskuryakov
mrowe
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2008-09-30 08:17:53 PDT
Confirmed.
Alexey Proskuryakov
Comment 2
2009-02-16 05:40:02 PST
Created
attachment 27694
[details]
proposed fix Makes the behavior match IE and Firefox for most compatibility.
Alexey Proskuryakov
Comment 3
2009-02-23 01:44:57 PST
Committed revision 41136.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug