        Reviewed by Mark Rowe.

Test: fast/dom/empty-hash-and-search.html

        https://bugs.webkit.org/show_bug.cgi?id=21147
        hash property returns incorrect value for links w/o hash

        Make hash() and search() behavior for empty and missing parts match IE and Firefox.

        * platform/KURL.cpp:
        (WebCore::KURL::query): Changed to return query without '?', as it is already done for ref().
        (WebCore::KURL::prettyURL): Append the query with the question mark.

        * page/Location.cpp:
        (WebCore::Location::search): Return an empty string if query is empty or missing.
        (WebCore::Location::hash): Return an empty string for empty hashes, not only missing ones.

        * dom/WorkerLocation.cpp:
        (WebCore::WorkerLocation::search):
        (WebCore::WorkerLocation::hash):
        Match document.location fixes above.

        * html/HTMLAnchorElement.cpp:
        (WebCore::HTMLAnchorElement::hash):
        (WebCore::HTMLAnchorElement::search):
        Return an empty string for empty and missing parts.



Canonical link: https://commits.webkit.org/33218@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@41136 268f45cc-cd09-0410-ab3c-d52691b4dbfc